--- a/ModuleShellApp/ModuleShellApp.csproj
+++ b/ModuleShellApp/ModuleShellApp.csproj
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestingModule\TestingModule.csproj" />
+    <ProjectReference Include="..\PaymentsModule\PaymentsModule.csproj" />
   </ItemGroup>
 </Project>
